--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
-    "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
-    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/pwa": "^0.11.4",
     "@angular/router": "~7.1.0",
     "@angular/service-worker": "~7.1.0",
+    "@clr/angular": "^1.0.3-patch",
     "core-js": "^2.5.4",
     "http-server": "^0.11.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "@clr/ui": "^1.0.3-patch",
+    "@clr/icons": "^1.0.3-patch",
+    "@webcomponents/custom-elements": "^1.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "~0.11.4",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
