--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~7.1.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/pwa": "^0.11.4",
+    "@angular/pwa": "~0.11.0",
     "@angular/router": "~7.1.0",
     "@angular/service-worker": "~7.1.0",
     "@clr/angular": "^1.0.3-patch",
@@ -31,7 +32,7 @@
     "@webcomponents/custom-elements": "^1.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.4",
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
