--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,15 +1,15 @@
 {
-  "index": "/pharma/index.html",
+  "index": "/index.html",
   "assetGroups": [
     {
       "name": "app",
       "installMode": "prefetch",
       "resources": {
         "files": [
-          "/pharma/favicon.ico",
-          "/pharma/index.html",
-          "/pharma/*.css",
-          "/pharma/*.js"
+          "/favicon.ico",
+          "/index.html",
+          "/*.css",
+          "/*.js"
         ]
       }
     }, {
@@ -18,7 +18,7 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/pharma/assets/**"
+          "/assets/**"
         ]
       }
     }
