--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.4",
-    "@angular/common": "~7.2.4",
-    "@angular/compiler": "~7.2.4",
-    "@angular/core": "~7.2.4",
-    "@angular/forms": "~7.2.4",
-    "@angular/platform-browser": "~7.2.4",
-    "@angular/platform-browser-dynamic": "~7.2.4",
+    "@angular/animations": "~7.2.6",
+    "@angular/common": "~7.2.6",
+    "@angular/compiler": "~7.2.6",
+    "@angular/core": "~7.2.6",
+    "@angular/forms": "~7.2.6",
+    "@angular/platform-browser": "~7.2.6",
+    "@angular/platform-browser-dynamic": "~7.2.6",
     "@angular/pwa": "~0.11.0",
-    "@angular/router": "~7.2.4",
-    "@angular/service-worker": "~7.2.4",
-    "@clr/angular": "^1.0.5",
-    "core-js": "^2.5.4",
+    "@angular/router": "~7.2.6",
+    "@angular/service-worker": "~7.2.6",
+    "@clr/angular": "^1.1.0",
+    "@clr/icons": "^1.1.0",
+    "@clr/ui": "^1.1.0",
+    "@webcomponents/custom-elements": "^1.0.0",
+    "core-js": "^2.6.5",
     "http-server": "^0.11.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.29",
-    "@clr/ui": "^1.0.5",
-    "@clr/icons": "^1.0.5",
-    "@webcomponents/custom-elements": "^1.0.0"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.3.0",
-    "@angular/compiler-cli": "~7.2.4",
-    "@angular/language-service": "~7.2.4",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "^0.13.3",
+    "@angular/cli": "~7.3.3",
+    "@angular/compiler-cli": "~7.2.6",
+    "@angular/language-service": "~7.2.6",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
