--- a/package.json
+++ b/package.json
@@ -11,45 +11,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
-    "@angular/forms": "~8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/pwa": "^0.800.0",
-    "@angular/router": "~8.0.0",
-    "@angular/service-worker": "~8.0.0",
-    "@clr/angular": "^1.1.0",
-    "@clr/icons": "^1.1.0",
-    "@clr/ui": "^1.1.0",
-    "@webcomponents/custom-elements": "^1.0.0",
-    "core-js": "^2.6.5",
+    "@angular/animations": "~8.2.13",
+    "@angular/common": "~8.2.13",
+    "@angular/compiler": "~8.2.13",
+    "@angular/core": "~8.2.13",
+    "@angular/forms": "~8.2.13",
+    "@angular/platform-browser": "~8.2.13",
+    "@angular/platform-browser-dynamic": "~8.2.13",
+    "@angular/pwa": "^0.800.6",
+    "@angular/router": "~8.2.13",
+    "@angular/service-worker": "~8.2.13",
+    "@clr/angular": "^2.3.1",
+    "@clr/icons": "^2.3.1",
+    "@clr/ui": "^2.3.1",
+    "@webcomponents/custom-elements": "^1.3.0",
+    "core-js": "^2.6.10",
     "http-server": "^0.11.1",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.0",
-    "@angular/cli": "~8.0.0",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
+    "@angular-devkit/build-angular": "^0.803.17",
+    "@angular/cli": "~8.3.17",
+    "@angular/compiler-cli": "~8.2.13",
+    "@angular/language-service": "~8.2.13",
     "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.5.3"
   }
 }
